--- a/style for переходник.css
+++ b/style for переходник.css
@@ -25,11 +25,11 @@ main{
 }
 h2{
     color: #fce8a7;
-    text-align: start;
     font-size: 25px;
     font-family: font;
     margin-bottom: 7px;
     margin-left: 60px;
+    text-align: start;
 }
 p{
     color: #fff565;
@@ -56,4 +56,41 @@ li{
 }
 br{
     margin-bottom: 10px;
+    grid: d;
+}
+div.img{
+    width: 100%;
+    height: 250px;
+    background-image: url(img/набросок\ для\ п1.png);
+    background-size: cover;
+}
+button {
+    padding: 10px 20px;
+    background-color: #fce8a7;
+    color: black;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 30px 25px;
+    border: 2px solid black;
+    transition:
+    opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+.h{
+    background-image: url(img/набросок\ для\ п1.2.png);
+    background-size: cover;
+}
+footer{
+    background-color: #89c997;
+    height: 100px;
+}
+a{
+    text-decoration: none;
+    color: antiquewhite;
+    font-family: font;
+    font-size: 18px;
+}
+a:hover{
+    color: #fce8a7;
 }
