--- a/style for переходник4.css
+++ b/style for переходник4.css
@@ -13,11 +13,11 @@ header{
     background-repeat: no-repeat;
 }
 main{
-    background-color: #a54e56;
+    background-color: #b3554d;
 }
 .header{
-    padding-left: 550px;
-    padding-top: 250px;
+    padding-left: 760px;
+    padding-top: 600px;
     font-size: 40px;
     text-align: center;
     font-family: font;
@@ -30,6 +30,7 @@ h2{
     margin-bottom: 7px;
     margin-left: 60px;
     text-align: start;
+    margin-bottom: 15px;
 }
 p{
     color: #a7e4fc;
@@ -52,13 +53,6 @@ ol{
     font-size: 25px;
     font-family: font;
 }
-h4{
-    color: #a7e4fc;
-    text-align: justify;
-    font-size: 25px;
-    font-family: font;
-    margin-left: 50px;
-}
 img{
     height: 350px;
     padding-left: 150px;
@@ -68,4 +62,32 @@ br{
 }
 li{
     margin-bottom: 8px;
+}
+.back-button {
+    padding: 10px 20px;
+    background-color: #a54e56;
+    color: rgb(247, 230, 210);
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 30px 25px;
+    border: 2px solid black; /* Update dynamically for light/dark mode */
+    transition:
+    opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+nav{
+    background-color: #b35149;
+}
+footer{
+    background-color: #b35149;
+    height: 100px;
+}
+a{
+    text-decoration: none;
+    color: #96c9af;
+    font-size: 18px;
+}
+a:hover{
+    color: #a7e4fc;
 }
