--- a/Style for project.css
+++ b/Style for project.css
@@ -1,7 +1,13 @@
+@font-face {
+    font-family: font;
+    src: url(font/XI20.ttf);
+}
 .header{
     background-color: rgb(62, 60, 66);
     height: 50px;
     width: 100vw;
+    font-size: 40px;
+    font-family: font;
 }
 *{
     padding: 0px;
@@ -20,16 +26,25 @@
 div h1{
     text-align: left;
     border: 4px rgb(97, 97, 97);
-    padding-left: 590px;
-    padding-top: 250px;
+    padding-left: 740px;
+    padding-top: 220px;
     color: lightsteelblue;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: font;
+    font-size: 50px;
 }
 .content{
+    display: grid;
     background-color: gray;
     position: relative;
-    height: 1500px;
+    height: 1600px;
     width: 100vw;
+    grid-template-areas: 
+    "one" "one1"
+    "two" "two2"
+    "three" "three3"
+    "four" "four4"
+    "five5" "five5";
+    font-family: font;
 }
 .main{
     background: url(img/набросок.png);
@@ -57,4 +72,152 @@ a{
     position: absolute;
     right: 0;
     margin-right: 400px;
+}
+b{
+    font-size: 18px;
+}
+.footer{
+    background-color: gray;
+    text-align: center;
+    font-size: 20px;
+    color: bisque;
+}
+.one{
+    grid-area: one;
+}
+.two{
+    grid-area: two;
+}
+.three{
+    grid-area: three;
+}
+.four{
+    grid-area: four;
+}
+.five{
+    grid-area: five;
+}
+.one1{
+    grid-area: one1;
+}
+.two2{
+    grid-area: two2;
+}
+.three3{
+    grid-area: three3;
+}
+.four4{
+    grid-area: four4;
+}
+.five5{
+    grid-area: five5;
+}
+@media (max-width:480px) {
+    .header{
+        background-color: rgb(62, 60, 66);
+        height: 50px;
+        width: 800px;
+    }
+    *{
+        padding: 0px;
+        margin: 0px;
+    }
+    .header p{
+        text-align: center;
+        color: white;
+        font-weight: bold;
+    }
+    .title{
+        background-image: url(img/cat.png);
+        background-size: cover;
+        height: 500px;
+        width: 800px;
+    }
+    .title h1{
+        text-align: left;
+        border: 4px rgb(97, 97, 97);
+        padding-left: 340px;
+        padding-top: 105px;
+        color: lightsteelblue;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+    }
+    .content{
+        display: grid;
+        background-color: gray;
+        position: relative;
+        height: 1600px;
+        width: 100vw;
+        grid-template-areas: 
+        "one" "one1"
+        "two" "two2"
+        "three" "three3"
+        "four" "four4"
+        "five5" "five5";
+    }
+    .main{
+        background: url(img/набросок2.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 350px;
+        width: 800px;
+    }
+    .main h1{
+        color: rgb(97, 97, 97);
+        text-align: center;
+    }
+    a{
+        color: bisque;
+        text-decoration: none;
+    }
+    .img{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        object-fit: cover;
+        position: absolute;
+        left: 0;
+        margin-left: 400px;
+    }
+    .content h1 a h3{
+        position: absolute;
+        right: 0;
+        margin-right: 400px;
+    }
+    .header p{
+        font-size: 20px;
+    }
+    b{
+        font-size: 18px;
+    }
+    .one{
+        grid-area: one;
+    }
+    .two{
+        grid-area: two;
+    }
+    .three{
+        grid-area: three;
+    }
+    .four{
+        grid-area: four;
+    }
+    .five{
+        grid-area: five;
+    }
+    .one1{
+        grid-area: one1;
+    }
+    .two2{
+        grid-area: two2;
+    }
+    .three3{
+        grid-area: three3;
+    }
+    .four4{
+        grid-area: four4;
+    }
+    .five5{
+        grid-area: five5;
+    }
 }
